--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -364,15 +364,16 @@
 "Vite.RefreshBackFooter.NoMoreDataText" = "已经全部加载完毕";
 
 //Welcome
-"introduction.page.tip1.title" = "跨链多币种";
-"introduction.page.tip2.title" = "去中心化钱包";
-"introduction.page.tip3.title" = "转账零费用";
-"introduction.page.tip4.title" = "交易速度快";
-"introduction.page.tip1.desc" = "支持多种代币，方便资产管理";
-"introduction.page.tip2.desc" = "私钥本地保存，代码开源保证";
-"introduction.page.tip3.desc" = "交易消耗配额，运行PoW免费获取";
-"introduction.page.tip4.desc" = "异步架构设计，交易畅通无阻";
-"introduction.page.nextBtn.title" = "开始体验";
+"introduction.tip.title" = "交易消耗配额\n配额获取免费";
+//"introduction.page.tip1.title" = "跨链多币种";
+//"introduction.page.tip2.title" = "去中心化钱包";
+//"introduction.page.tip3.title" = "转账零费用";
+//"introduction.page.tip4.title" = "交易速度快";
+//"introduction.page.tip1.desc" = "支持多种代币，方便资产管理";
+//"introduction.page.tip2.desc" = "私钥本地保存，代码开源保证";
+//"introduction.page.tip3.desc" = "交易消耗配额，运行PoW免费获取";
+//"introduction.page.tip4.desc" = "异步架构设计，交易畅通无阻";
+//"introduction.page.nextBtn.title" = "开始体验";
 
 /* Error Message */
 "vite.error.network.error" = "网络异常，请稍后重试";
