--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -215,7 +215,7 @@
 "send.page.title" = "Transfer";
 "send.page.my.address.title" = "My VITE Address";
 "send.page.my.balance.title" = "Balance";
-"send.page.my.pledge.title" = "已获得抵押";
+"send.page.my.pledge.title" = "Benefited Stake";
 "send.page.my.quota.title" = "Spendable Quota/Quota Limit";
 "send.page.my.max.tx.count.title" = "Maximum Amount of Tx";
 "send.page.add.my.address.button.title" = "Mine";
@@ -312,10 +312,10 @@
 "quota.alert.pow.button.title" = "Run PoW";
 "quota.alert.quota.button.title" = "Stake VITE";
 "quota.float.view.title" = "Computing PoW to Secure Quota for this Transaction…";
-"quota.float.view.tip" = "本次交易需消耗%@UT";
+"quota.float.view.tip" = "This Transaction costs %@UT";
 "quota.pow.finished.float.view.title" = "Transaction Sent";
 "quota.pow.finished.float.view.h1" = "You spent %1$@S in this PoW computation, and secured and used %2$@UT.";
-"quota.pow.finished.float.view.h2" = "抵押三天后可免费取回。当抵押获得的配额足够交易时，您将直接跳过PoW步骤及本弹窗。";
+"quota.pow.finished.float.view.h2" = "You may withdraw your staked VITE after 3 days. If the quota you received from staking is sufficient for a transaction, you can skip this step of PoW.";
 "quota.pow.finished.float.view.pledge.button.title" = "Stake to Speed";
 
 /* Peldge History */
