--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -675,28 +675,33 @@
 "crosschain.beta.alert" = "Current is a beta version, Please don't transfer in large amount.";
 "crosschain.fee" = "Fee";
 "crosschain.withdraw.gatewayispoor" = "Amount exceeds the %@-%@ limit, please contact gateway@vite.org to transfer out.";
-"crosschain.gatewaydetail.title" = "网关详情";
-"crosschain.gatewaydetail.name" =  "网关名称";
-"crosschain.gatewaydetail.webset" =  "官网";
-"crosschain.gatewaydetail.email" = "客服邮箱";
-"crosschain.gatewaydetail.statement" = "隐私政策&服务条款";
-"crosschain.gatewaydetail.host" = "网关URL";
-"crosschain.gatewaydetail.abstract" = "简介";
-"crosschain.statement.other.desc" = "本服务由%@提供。Vite平台对%@的业务没有任何责任，Vite平台不参与%@与Vite平台用户之间的任何活动。\n\n使用%@提供的服务，表明您同意%@%@。若您不同意这些条款，请勿使用%@服务。\n\n若您对支付流程有任何疑问，请联系%@客服团队%@";
-"crosschain.statement.vite.desc" = "本服务由%@提供。\n\n使用%@提供的服务，表明您同意%@%@。若您不同意这些条款，请勿使用%@服务。\n\n若您对支付流程有任何疑问，请联系%@客服团队%@。";
-"crosschain.statement.detail" = "服务条款，交易条件，限制及隐私政策";
-"crosschain.statement.agree" = "点击下一步代表您已同意%@的%@";
+"crosschain.gatewaydetail.title" = "Gateway Details";
+"crosschain.gatewaydetail.name" =  "Gateway Name";
+"crosschain.gatewaydetail.webset" =  "Official Website";
+"crosschain.gatewaydetail.email" = "Service Mailbox";
+"crosschain.gatewaydetail.statement" = "Terms of Service";
+"crosschain.gatewaydetail.host" = "Gateway URL";
+"crosschain.gatewaydetail.abstract" = "Introduction";
+"crosschain.statement.other.desc" = "This Service is provided by %@. Vite Platform assumes no responsibility for the activities performed by %@ and does not play a role in the relationship between %@ and users of Vite Platform.\n\nBy using services from %@, you agree to be bound by %@ %@. If you do not agree to these terms, plesae refrain from using service from %@.\n\nIn case of problems with verification or payment processing, please contact %@ support team at %@.";
+"crosschain.statement.vite.desc" = "This Service is provided by %@.\n\nBy using services from %@, you agree to be bound by %@%@. If you do not agree to these terms, plesae refrain from using service from %@.\n\nIn case of problems with verification or payment processing, please contact %@ support team at %@.";
+"crosschain.statement.detail" = "Terms of Service";
+"crosschain.statement.agree" = "By clicking Next, you agree with the %@'s %@";
+"crosschain.statement.title" = "Introduction";
 
 "unit.Million" = "Million";
 "unit.Billion" = "Billion";
 "unit.Trillion" = "Trillion";
 
-"exchange.history" = "购买记录";
-"exchange.card.title" = "买入VITE";
-"exchange.titley" = "一键买币";
-"exchange.buy" = "购买";
-"exchange.price" = "价格：";
-"exchange.amount" = "数量：";
+"exchange.history" = "Purchase History";
+"exchange.card.title" = "Buy VITE";
+"exchange.titley" = "Instant Purchase";
+"exchange.buy" = "Buy";
+"exchange.price" = "Rate: ";
+"exchange.amount" = "Amount: ";
+"exchange.limit.onetime" = "Single Transaction Limit: %@ - %@ VITE";
+"exchange.limit.oneday" = "Daily Transaction Limit %@ VITE；rest：%@ VITE";
+"exchange.limit.alert" = "The amount you entered is invalid. A single transaction should be at least %@ VITE and at most %@ VITE, and the daily transaction limit is %@ VITE.";
+
 
 /* ViteConnect */
 "bifrost.connect.tip.in.wallet.home" = "ViteConnect Connected";
