--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -634,7 +634,7 @@
 "crosschain.withdraw" = "Cross-Chain Transfer";
 "crosschain.withdraw.btnTitle" = "Transfer";
 "crosschain.deposit.btnTitle" = "Receive";
-"crosschain.deposit.vitewallet" = "Receive from Vite Wallet";
+"crosschain.deposit.vitewallet" = "Transfer In through Vite Wallet";
 "crosschain.deposit.otherwallet" = "Receive from Another Wallet";
 "crosschain.deposit.history" = "Receive History";
 "crosschain.withdraw.history" = "Transfer History";
