--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -644,9 +644,12 @@
 "crosschain.deposit.otherwallet" = "其他钱包转入";
 "crosschain.deposit.history" = "转入记录";
 "crosschain.withdraw.history" = "转出记录";
-"crosschain.deposit.minAmountDesc" = "最小转入金额为%@ ，若转入金额小于最小转入金额，将导致转入失败。";
+"crosschain.deposit.minAmountDesc" = "通过下方转入地址只能转入%@，且金额不得低于%@";
+"crosschain.deposit.minComfirm" = "%@个网络确认之后到账，请耐心等待";
 "crosschain.deposit.address" = "转入地址";
-"crosschain.deposit.scanAddress" = "请扫描二维码转入";
+"crosschain.deposit.scanAddress" = "请扫描地址二维码";
+"crosschain.deposit.scanLabel" = "请扫描%@二维码";
+"crosschain.deposit.labelDesc" = "请将%@与充值地址同时使用，否则币会丢失";
 "crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">关于跨链转入</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">跨链转入操作是将%@跨链映射至Vite网络，转入后您可以通过跨链转出。Vite钱包跨链转入是使用Vite钱包%@余额进行转入。</p>";
 "crosschain.deposit.other.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">关于跨链转入</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">跨链转入操作是将%@跨链映射至Vite网络，转入后您可以通过跨链转出。</p>";
 "crosschain.withdraw.eth.myAddress" = "我的ETH地址";
@@ -676,7 +679,7 @@
 "crosschain.status.gatewayReceived" = "网关已接收";
 "crosschain.status.withdraw.failed" = "转出失败";
 "crosschain.status.failedBecausePoor" = "转入金额过小";
-"crosschain.withdraw.fee.desc" = "此手续费包含以太矿工费用";
+"crosschain.withdraw.fee.desc" = "此手续费包含%@矿工费用";
 "crosschain.withdraw.aboutfee" = "关于手续费";
 "crosschain.status.failed" = "转入失败";
 "crosschain.beta.alert" = "当前网关为beta版，请不要转入大额资产";
@@ -715,7 +718,7 @@
 "exchange.price" = "价格：";
 "exchange.amount" = "数量：";
 "exchange.limit.onetime" = "单次购买限额：%@ - %@ VITE";
-"exchange.limit.oneday" = "单日总限额：%@ VITE；剩余额度：%@ VITE";
+"exchange.limit.oneday" = "单日总限额：%@ VITE；剩余额度：%@ VITE\n\n\n";
 "exchange.limit.alert" = "您输入的金额超出限制范围，单次购买限额%@-%@VITE，单日限额%@VITE";
 
 /* ViteConnect */
