--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -642,7 +642,7 @@
 "crosschain.deposit.minComfirm" = "%@个网络确认之后到账，请耐心等待";
 "crosschain.deposit.address" = "Receive Address";
 "crosschain.deposit.scanAddress" = "请扫描地址二维码";
-"crosschain.deposit.scanLabel" = "“请扫描%@二维码";
+"crosschain.deposit.scanLabel" = "请扫描%@二维码";
 "crosschain.deposit.labelDesc" = "请将%@与充值地址同时使用，否则币会丢失";
 
 "crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">About Cross-Chain Receive</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">Making a cross-chain receive allows %@ to be mapped into the Vite network. After that, you will also be able to make a cross-chain transfer. %@ balance in your Vite wallet will be reduced accordingly when you make a cross-chain receive from your Vite wallet.</p>";
