--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -648,7 +648,7 @@
 "crosschain.deposit.minComfirm" = "%@个网络确认之后到账，请耐心等待";
 "crosschain.deposit.address" = "转入地址";
 "crosschain.deposit.scanAddress" = "请扫描地址二维码";
-"crosschain.deposit.scanLabel" = "请扫描%@二维码";
+"crosschain.deposit.scanLabel" = "“请扫描%@二维码";
 "crosschain.deposit.labelDesc" = "请将%@与充值地址同时使用，否则币会丢失";
 "crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">关于跨链转入</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">跨链转入操作是将%@跨链映射至Vite网络，转入后您可以通过跨链转出。Vite钱包跨链转入是使用Vite钱包%@余额进行转入。</p>";
 "crosschain.deposit.other.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">关于跨链转入</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">跨链转入操作是将%@跨链映射至Vite网络，转入后您可以通过跨链转出。</p>";
@@ -679,7 +679,7 @@
 "crosschain.status.gatewayReceived" = "网关已接收";
 "crosschain.status.withdraw.failed" = "转出失败";
 "crosschain.status.failedBecausePoor" = "转入金额过小";
-"crosschain.withdraw.fee.desc" = "此手续费包含%@矿工费用";
+"crosschain.withdraw.fee.desc" = "此手续费为网关收取。";
 "crosschain.withdraw.aboutfee" = "关于手续费";
 "crosschain.status.failed" = "转入失败";
 "crosschain.beta.alert" = "当前网关为beta版，请不要转入大额资产";
