--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -853,3 +853,5 @@
 "app.scheme.home.page.busy.content" = "Please confirm transaction information below";
 "app.scheme.network.error" = "Network Error";
 "app.scheme.home.page.vite.store.function.title" = "Vite Store 下单";
+
+"copyed" = "Successfully copied";
